# VOC_IMPROVE

./: .gitignore  README.md  grpc_server.py  launch_agents.py  pyproject.toml  requirements.txt  voc.csv  voc.proto  voc_pb2.py  voc_pb2_grpc.py
agents/: critic.py  evaluator.py  improver.py  interpreter.py  retriever.py  summarizer.py
llm_wrappers/: anthropic_chat.py  openai_chat.py
quality_diagnosis/: defect_report.md  evaluation_rubric.csv  judge_cases.json  judge_cases.md  judge_rubric.json  llm_judge.py  qa_test_utils.py  test_agent_unit.py  test_cases.json  test_fault_tolerance.py  test_llm_judge.py  test_mcp_tools.py  test_pipeline_e2e.py  test_qa_test_utils.py
tests/: test_agent_log.py  test_agent_pipeline.py
utils/: agent_log.py  json_utils.py  settings.py  text_normalization.py
